# nonebot-plugin-sticker-saver

./: LICENSE  README.md  pyproject.toml
nonebot_plugin_sticker_saver/: __init__.py
